--- a/green.css
+++ b/green.css
@@ -1,11 +1,3 @@
-body{
-    background-image: url(green.jpg);
-    background-size: cover;
-    background-position:top;
-    padding: 0px;
-    margin:0px;
-    background-repeat: no-repeat;
-}
 
 #dd{
    width: 100%;
@@ -48,15 +40,15 @@ body{
      
 }
 #ee button{
-    height: 50px;
-    width:10%;
-    background-color: brown;
-    color: aliceblue;
-    margin-left: 60px;
-    border-radius: 5%;
+    background-color:darkslategray;
+    width: 150px;
+    height: 60px;
+    font-size: 18px;
+    font-style: italic
+    
 }
 #ee button:hover{
     background-color: burlywood;
-    border-radius: 50%
+   
     
 }
